# shopwave

./: Dockerfile  compose.yaml  lab.py  pyproject.toml  requirements.txt  run.py
instance/: site.db
shopwave/: __init__.py  forms.py  models.py  routes.py
shopwave/templates/: account.html  add_product.html  edit_product.html  layout.html  login.html  product_detail.html  products.html  register.html  seller.html
